# upgraded-giggle

./: CMakeLists.txt  build-run.ps1  configure-build-run.ps1
dependencies/: CMakeLists.txt
docs/: ARCHITECTURE.md
sprites/: ball_test.aseprite  everything.aseprite  tabletennistable_orange_room_with_ball.aseprite
sprites/ball/: shadow.aseprite  topspinball.aseperite.aseprite
sprites/player/: player.aseprite  playerBackSwing.aseprite  playerStand.aseprite
sprites/room/: tabletennistable_orange_room.aseprite
src/: CMakeLists.txt  Install.cmake  main.cpp
src/components/: BoundingBox.hpp  CAnimation.hpp  CBall.hpp  CBallShadow.hpp  CEnemy.hpp  CState.hpp  CTransform.hpp  Components.hpp  Enemy.hpp  InputComponent.hpp  Player.hpp  Sprite.hpp  Transform.hpp  Velocity.hpp
src/debug/: Debug.cpp  Debug.hpp
src/ecs/: Component.hpp  Entity.hpp  Registry.hpp  SceneManager.hpp
src/game/: EntityFactory.cpp  EntityFactory.hpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp
src/game/scenes/: GameScene.cpp  GameScene.hpp  Scene.hpp
src/game/utils/: Animation.cpp  Animation.hpp  Assets.cpp  Assets.hpp  Camera.hpp
src/imgui/: ImGuiLayer.cpp  ImGuiLayer.hpp
src/input/: RawInputState.hpp
src/math/: GridTransform.hpp  Random.hpp  TableHomography.cpp  TableHomography.hpp  Vec2.hpp
src/systems/: BallBounceSystem.cpp  BallBounceSystem.hpp  BallGravitySystem.cpp  BallGravitySystem.hpp  BoundarySystem.cpp  BoundarySystem.hpp  GridDebugSystem.cpp  GridDebugSystem.hpp  InputSystem.cpp  InputSystem.hpp  MetaInputSystem.cpp  MetaInputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  PlayerActionSystem.cpp  PlayerActionSystem.hpp  PlayerInputSystem.cpp  PlayerInputSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
